# ephra-be

./: .env.example  .gitignore  ARCHITECTURE_IMPROVEMENTS.md  COOLIFY_DEPLOYMENT.md  Caddyfile  DATABASE_SEEDING.md  Dockerfile  Dockerfile.prod  MIGRATION_SETUP.md  README.md  alembic.ini  create_test_data.py  docker-compose.prod.yml  docker-compose.yml  fix_enum_values.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_appointment_service.py  test_appointments_api.py  test_care_appointments.py  test_meeting_link.py  test_new_architecture.py  test_personal_journals.py  test_roles.py  test_schema_only.py
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 2025_05_25_2017-e9776e9576bd_initial_clean_architecture.py  2025_05_26_1012-2a3665f4be81_merge_heads.py  2025_06_14_1200-add_personal_journal_tables.py  (+5 more)
scripts/: check_migrations.py  check_ports.sh  check_security.py  create_admin_user.py  debug_cors.py  find_port.py  get_port.py  run_tests.sh  seed_database.py  seed_db.sh  setup-dev.sh  start_app.sh  start_prod.sh  test_expo_cors.py  test_prod_setup.sh
tests/: conftest.py  test_appointment_api_endpoints.py  test_appointment_email_integration.py  test_appointments.py  test_auth.py  test_care_provider_api.py  test_care_provider_service.py  test_deps.py  test_email_service.py  test_email_service_pendulum.py  test_error_handling.py  test_external_services.py  test_journals.py  test_main.py  test_media.py  test_pagination_and_filtering.py  test_rbac.py  test_rbac_integration.py  test_security.py  test_specialists.py  test_users.py
(+68 files in other folders)
